完成法爆魔杖，钓鱼机移植