@@ -3,23 +3,21 @@ package com.github.edg_thexu.better_experience.client.event;
 import com.github.edg_thexu.better_experience.Better_experience;
 import com.github.edg_thexu.better_experience.client.buffer.AABBBuffer;
 import com.github.edg_thexu.better_experience.config.ClientConfig;
-import com.github.edg_thexu.better_experience.init.ModAttachments;
-import com.github.edg_thexu.better_experience.intergration.confluence.ConfluenceHelper;
 import com.github.edg_thexu.better_experience.item.MagicBoomStaff;
 import com.github.edg_thexu.better_experience.networks.c2s.ServerBoundPacketC2S;
+import com.github.edg_thexu.better_experience.utils.ModUtils;
 import net.minecraft.client.Minecraft;
+import net.minecraft.world.item.AxeItem;
 import net.minecraft.world.item.ItemStack;
-import net.neoforged.api.distmarker.Dist;
-import net.neoforged.bus.api.SubscribeEvent;
-import net.neoforged.fml.common.EventBusSubscriber;
-import net.neoforged.neoforge.client.event.InputEvent;
-import net.neoforged.neoforge.client.event.RenderLevelStageEvent;
-import net.neoforged.neoforge.client.event.ScreenEvent;
-import net.neoforged.neoforge.network.PacketDistributor;
-import org.confluence.mod.client.gui.container.ExtraInventoryScreen;
-import org.confluence.mod.common.item.hammer.HammerItem;
+import net.minecraftforge.api.distmarker.Dist;
+import net.minecraftforge.client.event.InputEvent;
+import net.minecraftforge.client.event.RenderLevelStageEvent;
+import net.minecraftforge.client.event.ScreenEvent;
+import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.minecraftforge.fml.common.Mod;
 
-@EventBusSubscriber(modid = Better_experience.MODID, bus = EventBusSubscriber.Bus.GAME,value = Dist.CLIENT)
+
+@Mod.EventBusSubscriber(modid = Better_experience.MODID, bus = Mod.EventBusSubscriber.Bus.FORGE,value = Dist.CLIENT)
 public class ClientGameEvent {
 
     @SubscribeEvent
@@ -40,7 +38,7 @@ public class ClientGameEvent {
         if(Minecraft.getInstance().player!=null && Minecraft.getInstance().player.input.shiftKeyDown){
             ItemStack stack = Minecraft.getInstance().player.getMainHandItem();
             if(stack.getItem() instanceof MagicBoomStaff staff){
-                staff.range = Math.clamp( staff.range + (event.getScrollDeltaY() > 0 ? 1 : -1), 1, staff.maxRange);
+                staff.range = Math.min(Math.max( staff.range + (event.getScrollDelta() > 0 ? 1 : -1), 1), staff.maxRange);
                 event.setCanceled(true);
             }
         }
@@ -48,22 +46,22 @@ public class ClientGameEvent {
 
     @SubscribeEvent
     public static void event(InputEvent.MouseButton.Pre event){
-        if(!ConfluenceHelper.isLoaded()){
-            return;
-        }
-        if (Minecraft.getInstance().player != null && ClientConfig.MULTI_FISHING.get() &&  event.getButton() == 0 && event.getAction() == 1 && Minecraft.getInstance().player.getMainHandItem().getItem() instanceof HammerItem) {
-            PacketDistributor.sendToServer(new ServerBoundPacketC2S(3));
-
+//        if(!ConfluenceHelper.isLoaded()){
+//            return;
+//        }
+        if (Minecraft.getInstance().player != null && ClientConfig.MULTI_FISHING.get() &&  event.getButton() == 0 && event.getAction() == 1 && Minecraft.getInstance().player.getMainHandItem().getItem() instanceof AxeItem) {
+//            PacketDistributor.sendToServer(new ServerBoundPacketC2S(3));
+            ModUtils.sendToServer(new ServerBoundPacketC2S(3));
         }
 
     }
 
     @SubscribeEvent
     public static void closeScreen(ScreenEvent.Closing event){
-        if(ConfluenceHelper.isLoaded() && event.getScreen() instanceof ExtraInventoryScreen){
-            if (Minecraft.getInstance().player != null) {
-                Minecraft.getInstance().player.getData(ModAttachments.AUTO_POTION).sync(true);
-            }
-        }
+//        if(ConfluenceHelper.isLoaded() && event.getScreen() instanceof ExtraInventoryScreen){
+//            if (Minecraft.getInstance().player != null) {
+//                Minecraft.getInstance().player.getData(ModAttachments.AUTO_POTION).sync(true);
+//            }
+//        }
     }
 }
